--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -113,7 +113,7 @@
             Trending
         </div>
 
-        <a href="">
+        <a href="pages/page1/index.html">
             <div class="profile">
                 <div class="img-container">
                     <img src="elements/column1/element1.png" alt="" class="img">
