--- a/restaurant/index.html
+++ b/restaurant/index.html
@@ -121,8 +121,7 @@
 
                 <div class="flex">
                     <div class="text-container-profile">
-                        <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
+                        <div class="title">2J's Sizzling hauze</div>
                     </div>
 
                     <div class="rate">
@@ -146,7 +145,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -168,7 +166,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -190,7 +187,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -212,7 +208,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -240,7 +235,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -262,7 +256,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -291,7 +284,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -313,7 +305,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -341,7 +332,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -363,7 +353,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -385,7 +374,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -416,7 +404,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
@@ -438,7 +425,6 @@
                 <div class="flex">
                     <div class="text-container-profile">
                         <div class="title">Lorem ipsum</div>
-                        <div class="details">dolor sit amet, consectetur adipiscing.</div>
                     </div>
 
                     <div class="rate">
